# devfest-miami

./: .gitignore  README.md
ml-backend/cloud-run/: Dockerfile  api.py  cmd.txt  iris_controller.py  main.py  model_loader.py  pyproject.toml  training.ipynb  users_controllers.py
ml-backend/cloud-run/models/sklearn/: iris_model.pk
ml-backend/cloud-run/models/tf/iris_model/: keras_metadata.pb  saved_model.pb
ml-backend/cloud-run/models/tf/iris_model/variables/: variables.data-00000-of-00001  variables.index
ml-backend/tfserving/: cmd.txt  pyproject.toml  serving.config  test.py  tfserving-flowers.ipynb  tfserving-iris.ipynb
ml-backend/tfserving/flowers_model/1/: keras_metadata.pb  saved_model.pb
ml-backend/tfserving/flowers_model/1/variables/: variables.index
ml-backend/tfserving/iris_model/1/: keras_metadata.pb  saved_model.pb
ml-backend/tfserving/iris_model/1/variables/: variables.data-00000-of-00001  variables.index
ml-frontend/pre-trained-models/: index.html
ml-frontend/py2js/: flowers_classifier.ipynb  index.html
ml-frontend/py2js/model/: model.json
ml-frontend/tfjs-api-demo/: index.html
ml-frontend/visualization/: index.html  script.js
mlaas-demos/face_detection_api/: main.py  pyproject.toml
on-device/: Tweets_Classifier.ipynb
on-device/tweets_classifier/: settings.gradle
on-device/tweets_classifier/app/: build.gradle
on-device/tweets_classifier/app/src/main/: AndroidManifest.xml
on-device/tweets_classifier/app/src/main/assets/: labels.txt  model.tflite  vocab.txt
on-device/tweets_classifier/gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
