[tool.poetry]
name = "cloud-run-demo"
version = "0.1.0"
description = ""
authors = ["Henry Ruiz  <henryruiz22@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_run_demo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
pandas = "^1.5.1"
black = "^22.10.0"
matplotlib = "^3.6.1"
fastapi = "^0.85.1"
pydantic = "^1.10.2"
fastapi-utils = "^0.2.1"
uvicorn = "^0.19.0"
tensorflow = "^2.11.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
